# AI-Photo-Analyzer

./: .gitignore  BUILD.md  CHANGELOG.md  EXAMPLES.md  INSTALL.md  LICENSE  PROJECT_COMPLETE.md  README.md  build.py  config.example.json  generate_icon.py  pyproject.toml  requirements.txt  todo.md
ollama_image_analyzer/: __init__.py  __main__.py
ollama_image_analyzer/cli/: __init__.py  main.py
ollama_image_analyzer/core/: __init__.py  config.py  logging_config.py  ollama_client.py  prompt_manager.py
ollama_image_analyzer/gui/: __init__.py  batch_worker.py  image_viewer.py  main_window.py  prompt_editor.py  settings_dialog.py  theme.py  worker.py
ollama_image_analyzer/resources/: __init__.py
prompts/: README.md  accessibility_alt_text.txt  ai_toolkit.txt  ai_toolkit_flux.txt  ai_toolkit_ltx.txt  ai_toolkit_pony.txt  ai_toolkit_sd15.txt  ai_toolkit_sd3.txt  ai_toolkit_sdxl.txt  default.txt  ecommerce.txt  museum_archive.txt  nft_metadata.txt  photoprism.txt  product_description.txt  social_media.txt  stock_photography.txt  technical_photo_analysis.txt  text_extraction.txt
