[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-image-analyzer"
version = "1.1.0"
description = "Modern cross-platform desktop app for detailed image analysis using Ollama vision models"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ollama", "image-analysis", "vision", "ai", "desktop", "qt", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PySide6>=6.6.0",
    "ollama>=0.1.0",
    "typer[all]>=0.9.0",
    "platformdirs>=4.0.0",
    "Pillow>=10.0.0",
    "rich>=13.0.0",
    "piexif>=1.1.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
ollama-image-analyzer = "ollama_image_analyzer.__main__:main"

[project.gui-scripts]
ollama-image-analyzer-gui = "ollama_image_analyzer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ollama_image_analyzer*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py312"
